Fix login flash and adjust background
- Flash messages on login page now dynamically adjust width and don't wrap text
- Adjust background div height to prevent unnecessary scrollbar

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -267,7 +267,7 @@ Login and Signup Page
   justify-content: flex-start;
   align-items: center;
   flex-grow: 1;
-  min-height: calc(100vh - 130px);
+  min-height: calc(100vh - 132px);
   padding-top: 2rem;
   background-image: url('/static/images/login_bg.jpg');
   background-size: cover;
